--- a/index.html
+++ b/index.html
@@ -21,35 +21,36 @@
       color: hsl(228, 45%, 44%);
     }
   </style>
+  <link rel="stylesheet" href="3_column.css">
 </head>
 
-<body class="triptic">
+<body>
 
-  <div class="triptic__orange">
-    <h2>Sedans</h2>
-    <p>
-      Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-      or on your next road trip.
-    </p>
-    <div class="triptic__button"><a href="#">Learn More</a></div>
-  </div>
-
-  <div class="triptic__blue">
-    <h2>SUVs</h2>
-    <p>
-      Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-      and off-road adventures.
-    </p>
-    <div class="triptic__button"><a href="#">Learn More</a></div>
-  </div>
-
-  <div class="triptic__green">
-    <h2>Luxury</h2>
-    <p>
-      Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-      rental and arrive in style.
-    </p>
-    <div class="triptic__button"><a href="#">Learn More</a></div>
+  <div class="triptic">
+    <div class="triptic__orange">
+      <h2>Sedans</h2>
+      <p>
+        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+        or on your next road trip.
+      </p>
+      <div class="triptic__button"><a href="#">Learn More</a></div>
+    </div>
+    <div class="triptic__blue">
+      <h2>SUVs</h2>
+      <p>
+        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+        and off-road adventures.
+      </p>
+      <div class="triptic__button"><a href="#">Learn More</a></div>
+    </div>
+    <div class="triptic__green">
+      <h2>Luxury</h2>
+      <p>
+        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+        rental and arrive in style.
+      </p>
+      <div class="triptic__button"><a href="#">Learn More</a></div>
+    </div>
   </div>
 
   <div class="attribution">
